[gd_scene load_steps=2 format=3 uid="uid://cf1iprn526ntd"]

[ext_resource type="Script" uid="uid://cjeqwmytev133" path="res://Active Scenes/UI/menu_control.gd" id="1_txy2h"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_txy2h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 290.0
offset_right = 911.0
offset_bottom = 654.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Credits" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Music Composition"

[node name="Credits3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Ben Murphy"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Sound Design"

[node name="Credits3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Ben Murphy"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Animation "

[node name="Credits3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Ben Murphy"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Lead Horse Designer"

[node name="Credits3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Ben Murphy"
horizontal_alignment = 1

[node name="HBoxContainer10" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits2" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Emotional Support and generally being a stand-up guy"

[node name="Credits3" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Ben Murphy"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Level Design
"
vertical_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Brinley Morgan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Coding"
vertical_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Brinley Morgan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Game Design"
vertical_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Brinley Morgan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer8" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "Environment Art"
vertical_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Brinley Morgan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer9" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Credits4" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.65
text = "UX/UI"
vertical_alignment = 1

[node name="Credits5" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22
text = "Brinley Morgan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits6" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "See more of Ben's fantastic work on his soundcloud:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "https://soundcloud.com/messedup-murphy"

[node name="back_button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.14

[connection signal="pressed" from="HBoxContainer/VBoxContainer/back_button" to="." method="_on_back_button_pressed"]
