[gd_scene load_steps=2 format=3 uid="uid://fdspmfck7718"]

[ext_resource type="Script" uid="uid://cjeqwmytev133" path="res://Active Scenes/UI/menu_control.gd" id="1_w1lvd"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1lvd")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 179.0
offset_right = 773.0
offset_bottom = 420.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Horse Looper 2:
The Equine Space Program"
horizontal_alignment = 1
vertical_alignment = 1

[node name="game_start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "credits"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 611.0
offset_right = 773.0
offset_bottom = 642.0

[node name="quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Horse Looper 1:"

[connection signal="pressed" from="VBoxContainer/game_start" to="." method="_on_game_start_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer2/quit" to="." method="_on_quit_pressed"]
